nginx/time-server/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: time-service
  namespace: ingress-nginx
spec:
  selector:
    k8s-app: time-app
  ports:
  - port: 50051
    targetPort: 50051
    name: grpc
