nginx/time-server/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: time-server
  namespace: ingress-nginx
spec:
  rules:
  - host: timeserver.gke.net
    http:
      paths:
      - backend:
          serviceName: time-service
          servicePort: grpc
  tls:
  # This secret must exist beforehand
  # The cert must also contain the subj-name fortune-teller.stack.build
  # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
  - secretName: tls-secret
    hosts:
      - timeserver.gke.net
